--- a/ShortCom/en.lproj/MainStoryboard.storyboard
+++ b/ShortCom/en.lproj/MainStoryboard.storyboard
@@ -130,8 +130,8 @@
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" tag="2" contentMode="scaleToFill" image="mac.png" translatesAutoresizingMaskIntoConstraints="NO" id="Gp3-vD-kqg">
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="59" id="rwk-sQ-wx2"/>
-                                                        <constraint firstAttribute="height" constant="55" id="vXI-w0-jV3"/>
+                                                        <constraint firstAttribute="width" constant="31" id="Adi-Sg-vvr"/>
+                                                        <constraint firstAttribute="height" constant="31" id="QAb-JX-Gg5"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="left" text="未投稿" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ENu-6m-ro8">
@@ -143,9 +143,9 @@
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <constraints>
-                                            <constraint firstItem="Gp3-vD-kqg" firstAttribute="top" secondItem="4xz-rE-ZDa" secondAttribute="top" constant="12" id="773-gd-LdJ"/>
-                                            <constraint firstItem="Gp3-vD-kqg" firstAttribute="leading" secondItem="4xz-rE-ZDa" secondAttribute="leading" constant="61" id="Bvc-Ca-oUl"/>
+                                            <constraint firstItem="Gp3-vD-kqg" firstAttribute="top" secondItem="4xz-rE-ZDa" secondAttribute="top" constant="24" id="99J-o9-gTK"/>
                                             <constraint firstItem="ENu-6m-ro8" firstAttribute="top" secondItem="4xz-rE-ZDa" secondAttribute="top" constant="27" id="fj5-OC-sfN"/>
+                                            <constraint firstItem="Gp3-vD-kqg" firstAttribute="leading" secondItem="4xz-rE-ZDa" secondAttribute="leading" constant="89" id="iKr-AF-UsJ"/>
                                             <constraint firstAttribute="trailing" secondItem="ENu-6m-ro8" secondAttribute="trailing" constant="82" id="une-Q3-XXv"/>
                                         </constraints>
                                     </tableViewCell>
@@ -248,6 +248,47 @@
     <resources>
         <image name="mac.png" width="126" height="127"/>
     </resources>
+    <classes>
+        <class className="BoardViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BoardViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="commentUpdated:" candidateClass="UIStoryboardSegue"/>
+                <relationship kind="action" name="pushedButton:"/>
+                <relationship kind="outlet" name="postButton" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="CommentViewCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CommentViewCell.h"/>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="PostModalViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PostModalViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="closeModalDialog:"/>
+                <relationship kind="outlet" name="closeButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="postText" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="ThreadDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ThreadDetailViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="nameText" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="UIStoryboardSegue" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UIStoryboardSegue.h"/>
+        </class>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="threadUpdated:" candidateClass="UIStoryboardSegue"/>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
